# qsp-fft

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api-overview.md  architecture.md  dependency-on-qsp-core.md  downstream-usage.md  repo-roadmap.md
examples/: axis_comparison.py  basic_qfft.py  compare_qdft_vs_qfft.py  spectral_peaks.py  spectrum_demo.py  window_demo.py
qsp/fft/: __init__.py  analysis.py  axis.py  qdft.py  qfft.py  quaternion.py  spectrum.py  utils.py  validation.py  windows.py
qsp_fft/: __init__.py  analysis.py  spectrum.py  windows.py
src/qsp_fft/: __init__.py  analysis.py  axis.py  qdft.py  qfft.py  quaternion.py  spectrum.py  utils.py  validation.py
tests/: test_analysis.py  test_api.py  test_axis.py  test_inverse.py  test_package_api.py  test_parseval.py  test_qdft.py  test_qfft.py  test_quaternion.py  test_spectrum.py  test_windows.py
