[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsp-fft"
version = "0.1.1"
description = "Spectral-transform library built on qsp-core for the RQM Technologies ecosystem"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "qsp-core>=0.1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
namespaces = true
include = ["qsp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
