[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsp-fft"
version = "1.0.0"
description = "Quaternionic FFT (QDFT/QFFT) spectral engine for the RQM Technologies QSP ecosystem"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "RQM Technologies" },
]
keywords = [
    "fft",
    "quaternion",
    "qdft",
    "qfft",
    "spectrum",
    "signal-processing",
    "windowing",
    "qsp",
    "spectral-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "qsp-core>=0.1.0",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/RQM-Technologies-dev/qsp-fft"
Source = "https://github.com/RQM-Technologies-dev/qsp-fft"
"Bug Tracker" = "https://github.com/RQM-Technologies-dev/qsp-fft/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
namespaces = true
include = ["qsp*"]

[tool.setuptools.package-data]
"qsp.fft" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
